# ZDT-D

./: build.sh  module.prop
.github/workflows/: build.yml
application/: build.gradle
application/app/: build.gradle
application/app/src/main/res/drawable/: ic_program_updates_custom.xml
application/app/src/main/res/values/: strings.xml
application/app/src/main/res/values-ru/: strings.xml
module_template/: customize.sh
module_template/strategic/list/: custom.txt  default.txt  discord.txt  general.txt  google.txt  ignore.txt  ipset-v4.txt  ipset-v6.txt  ipset.txt  russia-discord.txt  russia-youtube.txt  russia-youtubeGV.txt  russia-youtubeQ.txt
module_template/working_folder/dnscrypt/setting/: LICENSE  blocked-names.txt  captive-portals.txt  cloaking-rules.txt  dnscrypt-proxy.toml
module_template/working_folder/nfqws/: active.json
module_template/working_folder/nfqws/main/: port.json
module_template/working_folder/nfqws/main/config/: config.txt
module_template/working_folder/operaproxy/app/uid/: user_program
module_template/working_folder/operaproxy/config/: api_proxy_list.txt  args.json  bootstrap_dns.json  bypass.txt
module_template/working_folder/proxyInfo/: uid_program
rust/T2s/: Cargo.toml
rust/T2s/src/: stats.rs  web.rs
rust/zdtd/: Cargo.toml
rust/zdtd/src/: api.rs  api_status.rs  daemon.rs  logging.rs  main.rs  ports.rs  proxyinfo.rs  runtime.rs  settings.rs  stats.rs  stop.rs
rust/zdtd/src/programs/: mieru.rs  mod.rs  myproxy.rs  operaproxy.rs  singbox.rs  tor.rs
zygisk/src/: main.cpp
(+25 files in other folders)
