[package]
name = "t2s"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal", "sync", "fs"] }
# Note: tokio-util does not have a "sync" feature; CancellationToken lives in tokio_util::sync.
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
regex = "1"
rand = "0.10"
socket2 = "0.6"
libc = "0.2"
futures = "0.3"
once_cell = "1"
# TCP-only build: no built-in DoH client.
